--- a/cv.css
+++ b/cv.css
@@ -7,12 +7,18 @@ p, ul, li{
     font-family: Georgia, 'Times New Roman', Times, serif;
     font-size: 1vw;
 }
+a{
+    text-decoration-line: none;
+    text-decoration-style: solid;
+    text-decoration-color: currentcolor;
+    outline: 0;
+}
+
 h1{
     color: black;
     font-family: Georgia, 'Times New Roman', Times, serif;
     font-size: 4vw;
     padding-left: 2vw;
-    text-decoration: none;
 }
 h2{
     color: black;
